fix validation error for OOXML chart export, related fdo#67300

Change-Id: I7d74439bba3b912fe9b81ebeca865298bc32d71e
Reviewed-on: https://gerrit.libreoffice.org/6879
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>